--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -1866,6 +1866,17 @@ button#sidebarToggle:before {
     z-index: 6000;
 }
 
+.buying-options-btn-wrapper {
+  margin-top: 20px;
+}
+
+
+@media only screen and (min-width: 767px)  {
+  .buying-options-btn-wrapper {
+    margin-top: 0;
+  }
+}
+
 @media only screen and (min-width: 992px)  {
   .stock-alert {
     bottom: 45px;
